# stack-all

./: .stack-all  .travis.yml  ChangeLog.md  Main.hs  README.md  TODO  stack-all.cabal  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts16.yaml  stack-lts18.yaml  stack.yaml
.github/workflows/: build.yml
src/: Main.hs  MajorVer.hs  Snapshots.hs  StackYaml.hs  Types.hs
