name:                stack-all
version:             0.1
synopsis:            CLI tool for building across Stackage major versions
description:
        Build your Haskell project easily over Stackage major versions.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
category:            Distribution
homepage:            https://github.com/juhp/stack-all
bug-reports:         https://github.com/juhp/stack-all/issues
build-type:          Simple
extra-doc-files:     README.md
--                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/stack-all.git

executable stack-all
  main-is:             Main.hs
  other-modules:       Paths_stack_all
  build-depends:       base < 5,
                       config-ini,
                       directory,
                       extra,
                       filepath,
                       simple-cmd,
                       simple-cmd-args,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
